k8s/apps/prod/jpdesigns/site/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jpdesigns-site
  namespace: jpdesigns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: jpdesigns-site
  template:
    metadata:
      labels:
        app: jpdesigns-site
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - jpdesigns-site
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: jpdesigns-site
          image: nexus.oplabs.us/gitlab/new-jp-designs:112 # {"$imagepolicy": "flux-system:jpdesigns-site-prod"}
          # resources:
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
          volumeMounts:
            - name: varlog
              mountPath: /var/log/app
        # - name: alert-sidecar
        #   image: nexus.oplabs.us/gitlab/alert-sidecar:latest
        #   imagePullPolicy: Always
        #   env:
        #     - name: DISCORD_WEBHOOK_URL
        #       valueFrom:
        #         secretKeyRef:
        #           name: alert-sidecar-secret
        #           key: discord-webhook-url
        #   volumeMounts:
        #     - name: varlog
        #       mountPath: /var/log/app
        #       readOnly: true
      volumes:
        - name: varlog
          emptyDir: {}
      imagePullSecrets:
        - name: regcred
