k8s/apps/prod/jpdesigns/site/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jpdesigns-site
  namespace: jpdesigns
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/href: "https://paintbyjpdesigns.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "JP Designs Prod Site"
    gethomepage.dev/description: "Site for JP Designs"
    gethomepage.dev/group: "JP Designs"
    gethomepage.dev/icon: "nodejs.png"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`paintbyjpdesigns.com`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: traefik
      services:
        - name: jpdesigns-site
          port: 8080
    - match: Host(`www.paintbyjpdesigns.com`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: traefik
      services:
        - name: jpdesigns-site
          port: 8080
    - match: Host(`paintbyjpdesigns.com`) && PathPrefix(`/oauth2/`)
      kind: Rule
      services:
        - name: oauth-proxy
          port: 4180
  tls:
    secretName: paintbyjpdesigns-tls # give it the ole tls cert
